update du readme

--- a/src/.scribe/endpoints.cache/00.yaml
+++ b/src/.scribe/endpoints.cache/00.yaml
@@ -28,7 +28,7 @@ endpoints:
         name: name
         description: 'Must not be greater than 255 characters.'
         required: true
-        example: rlthvmqmdjwqlddhaa
+        example: japenzfamqxnbkghw
         type: string
         enumValues: []
         exampleWasSpecified: false
@@ -37,7 +37,7 @@ endpoints:
         name: email
         description: 'Must be a valid email address. Must not be greater than 255 characters.'
         required: true
-        example: rmaggio@example.org
+        example: nicolas.idell@example.net
         type: string
         enumValues: []
         exampleWasSpecified: false
@@ -46,15 +46,15 @@ endpoints:
         name: password
         description: ''
         required: true
-        example: culpa
+        example: autem
         type: string
         enumValues: []
         exampleWasSpecified: false
         custom: []
     cleanBodyParameters:
-      name: rlthvmqmdjwqlddhaa
-      email: rmaggio@example.org
-      password: culpa
+      name: japenzfamqxnbkghw
+      email: nicolas.idell@example.net
+      password: autem
     fileParameters: []
     responses: []
     responseFields: []
@@ -129,7 +129,7 @@ endpoints:
         name: email
         description: 'Must be a valid email address.'
         required: true
-        example: janiya05@example.org
+        example: ephraim11@example.net
         type: string
         enumValues: []
         exampleWasSpecified: false
@@ -138,14 +138,14 @@ endpoints:
         name: password
         description: ''
         required: true
-        example: nostrum
+        example: corrupti
         type: string
         enumValues: []
         exampleWasSpecified: false
         custom: []
     cleanBodyParameters:
-      email: janiya05@example.org
-      password: nostrum
+      email: ephraim11@example.net
+      password: corrupti
     fileParameters: []
     responses: []
     responseFields: []
@@ -180,7 +180,7 @@ endpoints:
     responses:
       -
         status: 200
-        content: '{"data":[{"nom":"pistolero","prenom":"laravel","image":"images\/0QjCS7l8HVbXaPo4muLGlEjxz4H7dXobH6OQ8UOW-custom_icon.png","created_at":"12 hours ago","updated_at":"12 hours ago"},{"nom":"hello world  pelo","prenom":"sacha","image":"images\/qOrAVPcYvrxVHIsKEsvxaLu4rdKqQLBWHdWHoiUY-paris.png","created_at":"12 hours ago","updated_at":"12 hours ago"},{"nom":"Dr. Mohamed Eichmann II","prenom":"Jody","image":"\/tmp\/cc3bf647edbc57b6f2afba27b586688f.png","created_at":"1 hour ago","updated_at":"1 hour ago"},{"nom":"Mr. Jerrod Greenholt","prenom":"Lavon","image":"\/tmp\/71391df7cf03d71754c81cd680a68c84.png","created_at":"1 hour ago","updated_at":"1 hour ago"}]}'
+        content: '{"data":[{"nom":"pistolero","prenom":"laravel","image":"images\/0QjCS7l8HVbXaPo4muLGlEjxz4H7dXobH6OQ8UOW-custom_icon.png","created_at":"13 hours ago","updated_at":"13 hours ago"},{"nom":"hello world  pelo","prenom":"sacha","image":"images\/qOrAVPcYvrxVHIsKEsvxaLu4rdKqQLBWHdWHoiUY-paris.png","created_at":"13 hours ago","updated_at":"12 hours ago"},{"nom":"Dr. Mohamed Eichmann II","prenom":"Jody","image":"\/tmp\/cc3bf647edbc57b6f2afba27b586688f.png","created_at":"2 hours ago","updated_at":"2 hours ago"},{"nom":"Mr. Jerrod Greenholt","prenom":"Lavon","image":"\/tmp\/71391df7cf03d71754c81cd680a68c84.png","created_at":"2 hours ago","updated_at":"2 hours ago"}]}'
         headers:
           cache-control: 'no-cache, private'
           content-type: application/json
@@ -220,7 +220,7 @@ endpoints:
         name: nom
         description: ''
         required: true
-        example: doloribus
+        example: in
         type: string
         enumValues: []
         exampleWasSpecified: false
@@ -229,7 +229,7 @@ endpoints:
         name: prenom
         description: ''
         required: false
-        example: cupiditate
+        example: at
         type: string
         enumValues: []
         exampleWasSpecified: false
@@ -244,8 +244,8 @@ endpoints:
         exampleWasSpecified: false
         custom: []
     cleanBodyParameters:
-      nom: doloribus
-      prenom: cupiditate
+      nom: in
+      prenom: at
     fileParameters:
       image: null
     responses: []
@@ -290,7 +290,7 @@ endpoints:
         name: nom
         description: ''
         required: false
-        example: enim
+        example: itaque
         type: string
         enumValues: []
         exampleWasSpecified: false
@@ -299,7 +299,7 @@ endpoints:
         name: prenom
         description: ''
         required: false
-        example: repudiandae
+        example: pariatur
         type: string
         enumValues: []
         exampleWasSpecified: false
@@ -314,8 +314,8 @@ endpoints:
         exampleWasSpecified: false
         custom: []
     cleanBodyParameters:
-      nom: enim
-      prenom: repudiandae
+      nom: itaque
+      prenom: pariatur
     fileParameters:
       image: null
     responses: []
