--- a/src/.scribe/endpoints/00.yaml
+++ b/src/.scribe/endpoints/00.yaml
@@ -26,7 +26,7 @@ endpoints:
         name: name
         description: 'Must not be greater than 255 characters.'
         required: true
-        example: rlthvmqmdjwqlddhaa
+        example: japenzfamqxnbkghw
         type: string
         enumValues: []
         exampleWasSpecified: false
@@ -35,7 +35,7 @@ endpoints:
         name: email
         description: 'Must be a valid email address. Must not be greater than 255 characters.'
         required: true
-        example: rmaggio@example.org
+        example: nicolas.idell@example.net
         type: string
         enumValues: []
         exampleWasSpecified: false
@@ -44,15 +44,15 @@ endpoints:
         name: password
         description: ''
         required: true
-        example: culpa
+        example: autem
         type: string
         enumValues: []
         exampleWasSpecified: false
         custom: []
     cleanBodyParameters:
-      name: rlthvmqmdjwqlddhaa
-      email: rmaggio@example.org
-      password: culpa
+      name: japenzfamqxnbkghw
+      email: nicolas.idell@example.net
+      password: autem
     fileParameters: []
     responses: []
     responseFields: []
@@ -127,7 +127,7 @@ endpoints:
         name: email
         description: 'Must be a valid email address.'
         required: true
-        example: janiya05@example.org
+        example: ephraim11@example.net
         type: string
         enumValues: []
         exampleWasSpecified: false
@@ -136,14 +136,14 @@ endpoints:
         name: password
         description: ''
         required: true
-        example: nostrum
+        example: corrupti
         type: string
         enumValues: []
         exampleWasSpecified: false
         custom: []
     cleanBodyParameters:
-      email: janiya05@example.org
-      password: nostrum
+      email: ephraim11@example.net
+      password: corrupti
     fileParameters: []
     responses: []
     responseFields: []
@@ -178,7 +178,7 @@ endpoints:
     responses:
       -
         status: 200
-        content: '{"data":[{"nom":"pistolero","prenom":"laravel","image":"images\/0QjCS7l8HVbXaPo4muLGlEjxz4H7dXobH6OQ8UOW-custom_icon.png","created_at":"12 hours ago","updated_at":"12 hours ago"},{"nom":"hello world  pelo","prenom":"sacha","image":"images\/qOrAVPcYvrxVHIsKEsvxaLu4rdKqQLBWHdWHoiUY-paris.png","created_at":"12 hours ago","updated_at":"12 hours ago"},{"nom":"Dr. Mohamed Eichmann II","prenom":"Jody","image":"\/tmp\/cc3bf647edbc57b6f2afba27b586688f.png","created_at":"1 hour ago","updated_at":"1 hour ago"},{"nom":"Mr. Jerrod Greenholt","prenom":"Lavon","image":"\/tmp\/71391df7cf03d71754c81cd680a68c84.png","created_at":"1 hour ago","updated_at":"1 hour ago"}]}'
+        content: '{"data":[{"nom":"pistolero","prenom":"laravel","image":"images\/0QjCS7l8HVbXaPo4muLGlEjxz4H7dXobH6OQ8UOW-custom_icon.png","created_at":"13 hours ago","updated_at":"13 hours ago"},{"nom":"hello world  pelo","prenom":"sacha","image":"images\/qOrAVPcYvrxVHIsKEsvxaLu4rdKqQLBWHdWHoiUY-paris.png","created_at":"13 hours ago","updated_at":"12 hours ago"},{"nom":"Dr. Mohamed Eichmann II","prenom":"Jody","image":"\/tmp\/cc3bf647edbc57b6f2afba27b586688f.png","created_at":"2 hours ago","updated_at":"2 hours ago"},{"nom":"Mr. Jerrod Greenholt","prenom":"Lavon","image":"\/tmp\/71391df7cf03d71754c81cd680a68c84.png","created_at":"2 hours ago","updated_at":"2 hours ago"}]}'
         headers:
           cache-control: 'no-cache, private'
           content-type: application/json
@@ -218,7 +218,7 @@ endpoints:
         name: nom
         description: ''
         required: true
-        example: doloribus
+        example: in
         type: string
         enumValues: []
         exampleWasSpecified: false
@@ -227,7 +227,7 @@ endpoints:
         name: prenom
         description: ''
         required: false
-        example: cupiditate
+        example: at
         type: string
         enumValues: []
         exampleWasSpecified: false
@@ -242,8 +242,8 @@ endpoints:
         exampleWasSpecified: false
         custom: []
     cleanBodyParameters:
-      nom: doloribus
-      prenom: cupiditate
+      nom: in
+      prenom: at
     fileParameters:
       image: null
     responses: []
@@ -288,7 +288,7 @@ endpoints:
         name: nom
         description: ''
         required: false
-        example: enim
+        example: itaque
         type: string
         enumValues: []
         exampleWasSpecified: false
@@ -297,7 +297,7 @@ endpoints:
         name: prenom
         description: ''
         required: false
-        example: repudiandae
+        example: pariatur
         type: string
         enumValues: []
         exampleWasSpecified: false
@@ -312,8 +312,8 @@ endpoints:
         exampleWasSpecified: false
         custom: []
     cleanBodyParameters:
-      nom: enim
-      prenom: repudiandae
+      nom: itaque
+      prenom: pariatur
     fileParameters:
       image: null
     responses: []
